update LeetCode Weekly Contest 480

--- a/algorithm/LeetCode/[Easy] 1925. Count Square Sum Triples.md
+++ b/algorithm/LeetCode/[Easy] 1925. Count Square Sum Triples.md
@@ -42,3 +42,26 @@ class Solution:
                     cnt += 1
         return cnt*2
 ```
+
+**Solution 2: (Math, Brute Force)**
+```
+Runtime: 5 ms, Beats 70.58%
+Memory: 7.76 MB, Beats 84.51%
+```
+```c++
+class Solution {
+public:
+    int countTriples(int n) {
+        int a, b, c, ans = 0;
+        for (a = 1; a <= n; a ++) {
+            for (b = 1; b <= n; b ++) {
+                c = sqrt(a * a + b * b);
+                if (c <= n && a * a + b * b == c * c) {
+                    ans += 1;
+                }
+            }
+        }
+        return ans;
+    }
+};
+```
