--- a/algorithm/LeetCode/[Easy] 3606. Coupon Code Validator.md
+++ b/algorithm/LeetCode/[Easy] 3606. Coupon Code Validator.md
@@ -55,30 +55,41 @@ Third coupon has invalid business line (invalid).
 ---
 **Solution 1: (String)**
 ```
-Runtime: 7 ms, Beats 61.80%
-Memory: 69.70 MB, Beats 49.60%
+Runtime: 3 ms, Beats 81.55%
+Memory: 68.77 MB, Beats 72.96%
 ```
 ```c++
 class Solution {
+    bool isValid_code(string &code) {
+        if (code == "") {
+            return false;
+        }
+        for (auto &c: code) {
+            if (!isalnum(c) && c != '_') {
+                return false;
+            }
+        }
+        return true;
+    }
+    bool isValid_business(string &business) {
+        if (business == "electronics" || business == "grocery" || business == "pharmacy" || business == "restaurant") {
+            return true;
+        }
+        return false;
+    }
 public:
     vector<string> validateCoupons(vector<string>& code, vector<string>& businessLine, vector<bool>& isActive) {
         int n = code.size(), i;
-        vector<array<string,2>> dp;
-        vector<string> ans;
-        unordered_set<string> goodline = {
-            "electronics", "grocery", "pharmacy", "restaurant"
-        };
+        vector<array<string, 2>> dp;
         for (i = 0; i < n; i ++) {
-            if (code[i] == "" || !all_of(code[i].begin(), code[i].end(), [](char &c){
-                return isalnum(c) || c == '_';
-            }) || !goodline.count(businessLine[i]) || isActive[i] == false) {
-                continue;
+            if (isValid_code(code[i]) && isValid_business(businessLine[i]) && isActive[i]) {
+                dp.push_back({businessLine[i], code[i]});
             }
-            dp.push_back({businessLine[i], code[i]});
         }
         sort(dp.begin(), dp.end());
-        for (auto &a: dp) {
-            ans.push_back(a[1]);
+        vector<string> ans;
+        for (i = 0; i < dp.size(); i ++) {
+            ans.push_back(dp[i][1]);
         }
         return ans;
     }
