--- a/algorithm/LeetCode/[Hard] 1862. Sum of Floored Pairs.md
+++ b/algorithm/LeetCode/[Hard] 1862. Sum of Floored Pairs.md
@@ -47,3 +47,62 @@ class Solution:
         quots=list(accumulate(incs))                              # Accumulate the increases to get the sum of quotients
         return sum([quots[num] for num in nums]) % 1_000_000_007  # Sum up all the quotients for all the numbers in the list.
 ```
+
+**Solution 2: (Math, Prefix Sum)**
+
+nums = [2,5,9]
+cnt
+2   1
+5   1
+9   1
+sieve
+2   1
+  4   1
+  6   1
+  8   1
+5   1
+  10  1
+9   1
+
+sieve
+    v     v       v
+0 1 2 3 4 5 6 7 8 9
+0 0 1 1 2 3 4 4 5 6
+
+nums = [7,7,7,7,7,7,7]
+cnt
+7   7
+sieve
+7   7
+  14    7
+  21    7
+
+sieve
+              v
+0 1 2 3 4 5 6 7
+0 0 0 0 0 0 0 7
+```
+Runtime: 40 ms, Beats 86.00%
+Memory: 102.72 MB, Beats 95.00%
+```
+```c++
+class Solution {
+    long long cnt[100001] = {}, sieve[100001] = {};
+public:
+    int sumOfFlooredPairs(vector<int>& nums) {
+        int mx = *max_element(begin(nums), end(nums));
+        for (auto &num : nums) {
+            cnt[num] += 1;
+        }
+        for (auto a = 1; a <= mx; a ++) {
+            if (cnt[a]) {
+                for (auto f = 1; a * f <= mx; f ++) {
+                    sieve[a * f] += cnt[a];
+                }
+            }
+        }
+        partial_sum(begin(sieve), end(sieve), begin(sieve));
+        return accumulate(begin(nums), end(nums), 0, [&](int sum, int a) { return (sum + sieve[a]) % 1000000007; });
+    }
+};
+```
