--- a/algorithm/LeetCode/[Hard] 1872. Stone Game VIII.md
+++ b/algorithm/LeetCode/[Hard] 1872. Stone Game VIII.md
@@ -89,3 +89,34 @@ class Solution:
     def stoneGameVIII(self, stones: List[int]) -> int:
         return reduce(lambda memo, cur : max(memo, cur - memo), list(accumulate(stones))[::-1][:-1])
 ```
+
+**Solution 2: (DP Bottom-Up, Prefix Sum)**
+
+  dp[x] = max(sum of all elements up to y - dp[y]) for all y > x
+
+  stones = [ -1,  2, -3,  4, -5]
+  pre    = [ -1,  1, -2,  2, -3]
+  ans                     5  -3
+
+  stones = [7, -6,   5, 10,  5, -2, -6]
+  pre    = [7,  1,   6, 16, 21, 19, 13]
+  ans                               13
+
+```
+Runtime: 98 ms, Beats 82.46%
+Memory: 91.68 MB, Beats 88.60%
+```
+```c++
+class Solution {
+public:
+    int stoneGameVIII(vector<int>& stones) {
+        vector<int> pre = stones;
+        partial_sum(begin(pre), end(pre), begin(pre));
+        int n = pre.size(), i, ans = pre.back();
+        for (i = n - 2; i > 0; --i) {
+            ans = max(ans, pre[i] - ans);
+        }
+        return ans;
+    }
+};
+```
