--- a/algorithm/LeetCode/[Hard] 1889. Minimum Space Wasted From Packaging.md
+++ b/algorithm/LeetCode/[Hard] 1889. Minimum Space Wasted From Packaging.md
@@ -75,3 +75,34 @@ class Solution:
             return -1
         return (minTotalBoxSize - sum(packages)) % 1_000_000_007  # minTotalWasted = minTotalBoxSize - totalPackageSize
 ```
+
+**Solution 2: (Binary Search, sort and try every box)**
+```
+Runtime: 53 ms, Beats 70.44%
+Memory: 114.16 MB, Beats 77.36%
+```
+```c++
+class Solution {
+public:
+    int minWastedSpace(vector<int>& packages, vector<vector<int>>& boxes) {
+        int n = packages.size(), MOD = 1e9 + 7, m, i, j;
+        sort(packages.begin(), packages.end());
+        long long ans = LONG_LONG_MAX, sum = accumulate(begin(packages), end(packages), 0LL), cur;
+        for (auto &cboxes : boxes) {
+            m = cboxes.size();
+            sort(cboxes.begin(), cboxes.end());
+            if (cboxes[m - 1] < packages[n - 1]) {
+                continue;
+            }
+            cur = 0, i = 0;
+            for (int &box : cboxes) {
+                j = upper_bound(packages.begin() + i, packages.end(), box) - packages.begin();
+                cur += 1LL * box * (j - i);
+                i = j;
+            }
+            ans = min(ans, cur);
+        }
+        return ans != LONG_LONG_MAX ? (ans - sum) % MOD : -1;
+    }
+};
+```
