--- a/algorithm/LeetCode/[Hard] 2025. Maximum Number of Ways to Partition an Array.md
+++ b/algorithm/LeetCode/[Hard] 2025. Maximum Number of Ways to Partition an Array.md
@@ -78,3 +78,61 @@ class Solution:
 
         return max(ans, ans2)
 ```
+
+**Solution 2: (Prefix Sum, Counter, Left and Right Differences)**
+
+For each pivot point, figure out the the difference between left and right sums, and count each difference in a hash map right.
+
+If we do not change anything, our answer will be the count of zero differences.
+
+Now, what happens if we change num[i] to k?
+
+All differences to the left of i will increase by nums[i] - k.
+All differences starting from i will decrease by nums[i] - k.
+Now, we go left-to-right, move differences from right to left, and track max partitions if we change the current number.
+
+                                             sum
+    ----------------------------------------------------------------------------------------------
+    nums[0] + nums[1] + ... + nums[pivot - 1] == nums[pivot] + nums[pivot + 1] + ... + nums[n - 1]
+    -----------------------------------------    -------------------------------------------------
+                     lsum                                          lsum
+    -> sum - 2 * lsum = 0
+
+                  sum - 2 * lsum
+                  = nums[i] - k
+      ------------xxxxxxxxxxx-------------
+           lsum                 lsum
+      ----------------------- ------------
+                left             right
+
+    nums = [2,-1,2], k = 3
+    sum  3
+    lsum    2  1
+right
+    -1   1
+    1    1
+```
+Runtime: 292 ms, Beats 57.94%
+Memory: 246.20 MB, Beats 75.70%
+```
+```c++
+class Solution {
+public:
+    int waysToPartition(vector<int>& nums, int k) {
+        unordered_map<long long, int> left, right;
+        long long sum = accumulate(begin(nums), end(nums), 0ll);
+        for (long long i = 0, lsum = 0; i < nums.size() - 1; ++i) {
+            lsum += nums[i];
+            ++right[sum - 2 * lsum];
+        }
+        int res = right[0];
+        for (long long i = 0, lsum = 0; i < nums.size(); ++i) {
+            res = max(res, left[nums[i] - k] + right[-nums[i] + k]);
+            lsum += nums[i];
+            ++left[sum - 2 * lsum];
+            --right[sum - 2 * lsum];
+        }
+        return res;
+    }
+};
+```
