--- a/algorithm/LeetCode/[Hard] 2106. Maximum Fruits Harvested After at Most K Steps.md
+++ b/algorithm/LeetCode/[Hard] 2106. Maximum Fruits Harvested After at Most K Steps.md
@@ -165,6 +165,17 @@ public:
 ```
 
 **Solution 4: (Sliding Window, left and right, at most wind once, try all solution)**
+
+
+case: startPos + (*rit)[0] - 2 * (*it)[0]
+      <--------
+      -------------------->
+      ^it      ^startPos  ^rit
+
+case: 2 * (*rit)[0] - (*it)[0] - startPos
+               ----------->
+               ^startPos  ^rit
+                          ^it
 ```
 Runtime: 0 ms, Beats 100.00%
 Memory: 124.48 MB, Beats 84.68%
