--- a/algorithm/LeetCode/[Hard] 2132. Stamping the Grid.md
+++ b/algorithm/LeetCode/[Hard] 2132. Stamping the Grid.md
@@ -109,3 +109,74 @@ public:
     }
 };
 ```
+
+**Solution 2: (Prefix Sum, Calulate the sub-matrix empty cell sum twice)**
+
+pre[i][j]: the total empty points in the rectangle with top-left at (0, 0) and right-bottom at (i - 1, j - 1)
+good[i][j]: it fits a stamp with stamp right-bottom at (i, j)
+pre_good[i][j]: the sub-martix is all empty with top-left at (0, 0) and right-bottom at (i - 1, j - 1)
+
+grid =        [[1, 0, 0, 0],
+               [1, 0, 0, 0],
+               [1, 0, 0, 0],
+               [1, 0, 0, 0],
+               [1, 0, 0, 0]], stampHeight = 4, stampWidth = 3
+
+pre  =       0  0  0  0  0
+             0     1  2  3
+             0     2  4  6
+             0     3  6  9
+             0     4  8 12
+             0     5 10 15 
+
+good =          0  0  0  0  
+                0         
+                0         
+                0        1
+                0        1
+
+pre_good =   0  0  0  0  0
+             0
+             0
+             0
+             0
+             0           1
+             0           2
+
+```
+Runtime: 160 ms, Beats 33.67%
+Memory: 209.70 MB, Beats 26.53%
+```
+```c++
+class Solution {
+public:
+    bool possibleToStamp(vector<vector<int>>& grid, int stampHeight, int stampWidth) {
+        int m = grid.size(), n = grid[0].size(), i, j, pi, pj, ni, nj;
+        vector<vector<int>> pre(m + 1, vector<int>(n + 1)), pre_good(m + 1, vector<int>(n + 1)), good(m, vector<int>(n));
+        for (i = 0; i < m; i ++) {
+            for (j = 0; j < n; j ++) {
+                pre[i + 1][j + 1] = pre[i + 1][j] + pre[i][j + 1] - pre[i][j] + (1 - grid[i][j]);
+                if (i + 1 >= stampHeight && j + 1 >= stampWidth) {
+                    pi = i + 1 - stampHeight, pj = j + 1 - stampWidth;
+                    if (pre[i + 1][j + 1] - pre[pi][j + 1] - pre[i + 1][pj] + pre[pi][pj] == stampWidth * stampHeight)
+                        good[i][j] += 1;
+                }
+            }
+        }
+        for (i = 0; i < m; i ++) {
+            for (j = 0; j < n; j ++) {
+                pre_good[i + 1][j + 1] = pre_good[i + 1][j] + pre_good[i][j + 1] - pre_good[i][j] + good[i][j];
+            }
+        }
+        for (i = 0; i < m; i ++) {
+            for (j = 0; j < n; j ++) {
+                ni = min(i + stampHeight, m), nj = min(j + stampWidth, n);
+                if (grid[i][j] == 0 && pre_good[ni][nj] - pre_good[i][nj] - pre_good[ni][j] + pre_good[i][j] == 0) {
+                    return false;
+                }
+            }
+        }
+        return true;
+    }
+};
+```
