--- a/algorithm/LeetCode/[Hard] 2147. Number of Ways to Divide a Long Corridor.md
+++ b/algorithm/LeetCode/[Hard] 2147. Number of Ways to Divide a Long Corridor.md
@@ -318,3 +318,43 @@ public:
     }
 };
 ```
+
+**Solution 8: (Greedy, find the product of all possible positions between every two adjacent segments)**
+
+         v v v      vj
+    | S S P P S P S |
+        ^i
+
+```
+Runtime: 17 ms, Beats 86.00%
+Memory: 33.78 MB, Beats 67.50%
+```
+```c++
+class Solution {
+public:
+    int numberOfWays(string corridor) {
+        int n = corridor.size(), i = 0, j, k = 0, MOD = 1e9 + 7;
+        long long ans = 1;
+        k = count(corridor.begin(), corridor.end(), 'S');
+        if (k % 2 || k == 0) {
+            return 0; 
+        } else if (k == 2) {
+            return 1;
+        }
+        k = 0;
+        for (j = 0; j < n; j ++) {
+            if (corridor[j] == 'S') {
+                k += 1;
+                if (k == 2) {
+                    i = j;
+                } else if (k == 3) {
+                    k = 1;
+                    ans *= j - i;
+                    ans %= MOD;
+                }
+            }
+        }
+        return ans;
+    }
+};
+```
