--- a/algorithm/LeetCode/[Hard] 2218. Maximum Value of K Coins From Piles.md
+++ b/algorithm/LeetCode/[Hard] 2218. Maximum Value of K Coins From Piles.md
@@ -132,3 +132,41 @@ public:
     }
 };
 ```
+
+**Solution 4: (DP Bottom-Up, Prefix Sum)**
+
+dp[i][j]: choosing j coins from the first i piles
+
+piles = [[   1, 100,   3],
+         [   7,   8,   9]], k = 2
+dp
+        0    0    0
+        0    1  101
+        0    7  101 = max(7 + 1, 7 + 8, 108)
+                          ------------  ----
+                             taken      not-taken
+
+```
+Runtime: 172 ms, Beats 23.59%
+Memory: 34.27 MB, Beats 54.84%
+```
+```c++
+class Solution {
+public:
+    int maxValueOfCoins(vector<vector<int>>& piles, int k) {
+        int n = piles.size(), i, j, x, cur;
+        vector<vector<int>> dp(n + 1, vector<int>(k + 1));
+        for (i = 1; i <= n; i ++) {
+            for (j = 1; j <= k; j ++) {
+                cur = 0;
+                for (x = 0; x < min(j, (int)piles[i - 1].size()); x ++) {
+                    cur += piles[i - 1][x];
+                    dp[i][j] = max(dp[i][j], cur + dp[i - 1][j - x - 1]);
+                }
+                dp[i][j] = max(dp[i][j], dp[i - 1][j]);
+            }
+        }
+        return dp[n][k];
+    }
+};
+```
