--- a/algorithm/LeetCode/[Hard] 2234. Maximum Total Beauty of the Gardens.md
+++ b/algorithm/LeetCode/[Hard] 2234. Maximum Total Beauty of the Gardens.md
@@ -168,7 +168,7 @@ public:
 };
 ```
 
-**Solution 3: (Two Pointers, gradually increase min and try all solution)**
+**Solution 3: (Two Pointers, gradually increase min and try all solution, get as mush as full first then decrease and try all available increased partial)**
 
 newFlowers: 9
 target: 8
