--- a/algorithm/LeetCode/[Hard] 2251. Number of Flowers in Full Bloom.md
+++ b/algorithm/LeetCode/[Hard] 2251. Number of Flowers in Full Bloom.md
@@ -73,7 +73,49 @@ public:
 };
 ```
 
-**Solution 3: (Hash Table, Sort, bucket sort)**
+**Solution 3: (Binary Search, Counter, Prefix Sum)**
+```
+Runtime: 128 ms, Beats 16.60%
+Memory: 112.16 MB, Beats 6.61%
+```
+```c++
+class Solution {
+public:
+    vector<int> fullBloomFlowers(vector<vector<int>>& flowers, vector<int>& people) {
+        int start, end, a = 0;
+        map<int, int> cnt;
+        cnt[0] = 0;
+        for (auto &flower: flowers) {
+            start = flower[0];
+            end = flower[1];
+            cnt[start] += 1;
+            cnt[end + 1] -= 1;
+        }
+        vector<vector<int>> dp;
+        for (auto &[t, k]: cnt) {
+            a += k;
+            dp.push_back({t, a});
+        }
+        vector<int> ans;
+        for (auto &t: people) {
+            vector<int> pa = {t, 0};
+            auto it = lower_bound(dp.begin(), dp.end(), pa);
+            if (it != dp.end()) {
+                if ((*it)[0] == t) {
+                    ans.push_back((*it)[1]);
+                } else {
+                    ans.push_back((*prev(it))[1]);
+                }
+            } else {
+                ans.push_back(dp.back()[1]);
+            }
+        }
+        return ans;
+    }
+};
+```
+
+**Solution 4: (Hash Table, Sort, bucket sort)**
 ```
 Runtime: 253 ms
 Memory: 87.9 MB
