--- a/algorithm/LeetCode/[Hard] 2382. Maximum Segment Sum After Removals.md
+++ b/algorithm/LeetCode/[Hard] 2382. Maximum Segment Sum After Removals.md
@@ -110,3 +110,67 @@ public:
     }
 };
 ```
+
+**Solution 3: (Reverse Union-Find)**
+
+                                                    
+    nums = [ 1, 2, 5, 6, 1]
+
+                           v
+    removeQueries = [0,3,2,4,1]
+    dp     [  ,-2,  ,  ,  ]
+    ans    [  ,  ,  , 2, 0]
+
+                         v
+    removeQueries = [0,3,2,4,1]
+    dp     [  ,-2,  ,  ,-1]
+    ans    [  ,  , 2, 2, 0]
+
+                       v
+    removeQueries = [0,3,2,4,1]
+    dp     [  ,-7, 1,  ,-1]
+    ans    [  , 7, 2, 2, 0]
+
+                     v
+    removeQueries = [0,3,2,4,1]
+    dp     [  ,-14, 1, 1, 1]
+    ans    [14,  7, 2, 2, 0]
+```
+Runtime: 7 ms, Beats 98.47%
+Memory: 107.63 MB, Beats 97.71%
+```
+```c++
+class Solution {
+    vector<long long> dp;
+    int find(int x) {
+        if (dp[x] < 0) {
+            return x;
+        }
+        dp[x] = find(dp[x]);
+        return dp[x];
+    }
+    void uni(int x, int y) {
+        int xr = find(x), yr = find(y);
+        dp[xr] += dp[yr];
+        dp[yr] = xr;
+    }
+public:
+    vector<long long> maximumSegmentSum(vector<int>& nums, vector<int>& removeQueries) {
+        int n = nums.size(), i, j;
+        dp.resize(n, INT_MAX);
+        vector<long long> ans(n);
+        for (i = n - 2; i >= 0; i --) {
+            j = removeQueries[i + 1];
+            dp[j] = -nums[j];
+            if (j && dp[j - 1] != INT_MAX) {
+                uni(j, j - 1);
+            }
+            if (j != n - 1 && dp[j + 1] != INT_MAX) {
+                uni(j, j + 1);
+            }
+            ans[i] = max(ans[i + 1], -dp[j]);
+        }
+        return ans;
+    }
+};
+```
