--- a/algorithm/LeetCode/[Hard] 2398. Maximum Number of Robots Within Budget.md
+++ b/algorithm/LeetCode/[Hard] 2398. Maximum Number of Robots Within Budget.md
@@ -110,3 +110,41 @@ public:
     }
 };
 ```
+
+**Solution 4: (Sliding Window, Deque, mono dec stack)**
+```
+Runtime: 10 ms, Beats 88.50%
+Memory: 112.52 MB, Beats 97.89%
+```
+```c++
+class Solution {
+public:
+    int maximumRobots(vector<int>& chargeTimes, vector<int>& runningCosts, long long budget) {
+        int n = chargeTimes.size(), i = 0, j, ans = 0;
+        long long a = 0, b;
+        deque<int> dq;
+        for (j = 0; j < n; j ++) {
+            while (dq.size() && chargeTimes[dq.back()] <= chargeTimes[j]) {
+                dq.pop_back();
+            }
+            dq.push_back(j);
+            a += runningCosts[j];
+            b = chargeTimes[dq.front()] + (j - i + 1) * a;
+            while (b > budget) {
+                a -= runningCosts[i];
+                while (dq.size() && dq.front() <= i) {
+                    dq.pop_front();
+                }
+                i += 1;
+                if (dq.size()) {
+                    b = chargeTimes[dq.front()] + (j - i + 1) * a;
+                } else {
+                    b = (j - i + 1) * a;
+                }
+            }
+            ans = max(ans, j - i + 1);
+        }
+        return ans;
+    }
+};
+```
