--- a/algorithm/LeetCode/[Hard] 2478. Number of Beautiful Partitions.md
+++ b/algorithm/LeetCode/[Hard] 2478. Number of Beautiful Partitions.md
@@ -85,3 +85,122 @@ class Solution:
         
         return dp(0, k)
 ```
+
+**Solution 2: (DP Bottom-Up, O(n^2 * k))**
+```
+Runtime: 1738 ms, Beats 10.35%
+Memory: 71.32 MB, Beats 24.14%
+```
+```c++
+class Solution {
+public:
+    int beautifulPartitions(string s, int k, int minLength) {
+        int n = s.size(), i, ck, MOD = 1e9 + 7;
+        vector<vector<long long>> dp(n + 1, vector<long long>(k + 1));
+        vector<vector<int>> pre(10);
+        dp[0][0] = 1;
+        for (i = 0; i < n; i ++) {
+            if (s[i] == '2' || s[i] == '3' || s[i] == '5' || s[i] == '7') {
+                pre[s[i] - '0'].push_back(i);
+            } else {
+                for (auto &p: {2, 3, 5, 7}) {
+                    for (auto j: pre[p]) {
+                        if (i - j < minLength - 1) {
+                            break;
+                        }
+                        for (ck = 0; ck < k; ck ++) {
+                            dp[i + 1][ck + 1] += dp[j][ck];
+                            dp[i + 1][ck + 1] %= MOD;
+                        }
+                    }
+                }
+            }
+        }
+        return dp[n][k];
+    }
+};
+```
+
+**Solution 3: (DP Bottom-Up, O(n^2 * k))**
+```
+Runtime: 1762 ms, Beats 10.35%
+Memory: 71.07 MB, Beats 31.03%
+```
+```c++
+class Solution {
+public:
+    int beautifulPartitions(string s, int k, int minLength) {
+        int n = s.size(), i, j, ck, MOD = 1e9 + 7;
+        vector<vector<long long>> dp(n + 1, vector<long long>(k + 1));
+        dp[0][0] = 1;
+        for (j = 0; j < n; j ++) {
+            if (s[j] != '2' && s[j] != '3' && s[j] != '5' && s[j] != '7') {
+                for (i = 0; i <= j - minLength + 1; i ++) {
+                    if (s[i] == '2' || s[i] == '3' || s[i] == '5' || s[i] == '7') {
+                        for (ck = 0; ck < k; ck ++) {
+                            dp[j + 1][ck + 1] += dp[i][ck];
+                            dp[j + 1][ck + 1] %= MOD;
+                        }
+                    }
+                }
+            }
+        }
+        return dp[n][k];
+    }
+};
+```
+**Solution 4: (DP Bottom-Up, Prefix Sum, O(n * k))**
+
+                       v              v         v  
+s = "2    3     5    4    2    1    8    5    1    3    1", k = 3, minLength = 2
+dp                                                       
+                                                        -
+                                                   ------
+                                              -----------
+                                         ----------------
+0    1    1     1    1    1    1    1    1    1    1    1
+                                         ------    ------
+                                         ----------------
+1         3     3    3    2    2    2    1    1
+                                    ^
+     --------------------------------   -------   --------
+                                    ^
+2         3     3    3    1    1    1
+                     v               
+     -----------------    ---------------------   --------
+     -----------------    -----------   ------------------
+
+```
+Runtime: 103 ms, Beats 60.46%
+Memory: 71.09 MB, Beats 30.23%
+```
+```c++
+class Solution {
+    string primes = "2357";
+    bool isPrime(char c) {
+        return primes.find(c) != string::npos;
+    }
+public:
+    int beautifulPartitions(string s, int k, int minLength) {
+        int n = s.size(), mod = 1e9 + 7;
+        if (!isPrime(s[0]) || isPrime(s[n - 1])) {
+            return false;
+        }
+        vector<vector<long>> dp(n, vector<long>(k + 1));
+        for (int i = 0; i < n; i ++) {
+            dp[i][0] = 1;
+        }
+        for (int i = n - minLength - 1; i >= minLength - 1; i--) {
+            for (int j = 1; j < k; j ++) {
+                dp[i][j] = dp[i + 1][j];
+                // can cut here
+                if (!isPrime(s[i]) && isPrime(s[i + 1])) {
+                    dp[i][j] = (dp[i][j] + dp[i + minLength][j - 1]) % mod;
+                }
+            }
+        }
+
+        return dp[minLength - 1][k - 1];
+    }
+};
+```
