--- a/algorithm/LeetCode/[Hard] 2488. Count Subarrays With Median K.md
+++ b/algorithm/LeetCode/[Hard] 2488. Count Subarrays With Median K.md
@@ -128,3 +128,43 @@ public:
     }
 };
 ```
+
+**Solution 3: (Counter, Prefix Sum, left and right)**
+
+                          vi
+    nums = [  3,  2,  1,  4,  5], k = 4
+              ^j              ^j
+    > k                   0   1
+    a                     0   1
+    cnt
+        0                 1
+        1                     1
+    > k      -1  -1  -1   0
+    a        -3  -2  -1   0
+    ans               3   2
+
+```
+Runtime: 27 ms, Beats 56.96%
+Memory: 56.58 MB, Beats 53.16%
+```
+```c++
+class Solution {
+public:
+    int countSubarrays(vector<int>& nums, int k) {
+        unordered_map<int, int> cnt;
+        int n = nums.size(), i = find(begin(nums), end(nums), k) - begin(nums), j, a, ans = 0;
+        a = 0;
+        for (j = i; j < n; j ++) {
+            a += nums[j] == k ? 0 : nums[j] < k ? -1 : 1;
+            cnt[a] += 1;
+        }
+        a = 0;
+        for (j = i; j >= 0; j --) {
+            a += nums[j] == k ? 0 : nums[j] < k ? -1 : 1;
+            ans += cnt[-a] + cnt[-a + 1];
+        }
+        return ans;
+
+    }
+};
+```
