--- a/algorithm/LeetCode/[Hard] 2528. Maximize the Minimum Powered City.md
+++ b/algorithm/LeetCode/[Hard] 2528. Maximize the Minimum Powered City.md
@@ -150,7 +150,7 @@ public:
 };
 ```
 
-**Solution 2: (Binary Search, Greedy)**
+**Solution 2: (Binary Search, Greedy, upper bound)**
 ```
 Runtime: 62 ms, Beats 95.58%
 Memory: 146.48 MB, Beats 77.29%
