--- a/algorithm/LeetCode/[Hard] 2552. Count Increasing Quadruplets.md
+++ b/algorithm/LeetCode/[Hard] 2552. Count Increasing Quadruplets.md
@@ -70,7 +70,7 @@ class Solution:
         return ans
 ```
 
-**Solution 2: (Two Pointers)**
+**Solution 2: (Two Pointers, Prefix Sum, left and right)**
 ```
 Runtime: 724 ms
 Memory: 258.4 MB
@@ -104,6 +104,124 @@ public:
             }
         }
         return res;
+    }
+};
+```
+
+**Solution 3: (Two Pointers, Counter, Prefix Sum, left and right)**
+
+     pattern
+                     x
+                x
+                   x
+             x
+
+        left ->         <- right
+                vj vk
+          5  |           x
+          4  |        x  ^
+          3  |  x     ^  | <
+        > 2  v     x  |  |
+          1  x        |  |
+     nums = [1, 3, 2, 4, 5]
+     left       ->
+         5      1  2  3  4 |
+         4      1  2  3  3 v
+         3      1  1  2  2
+         2      1  1  1  1
+         1
+     right           <-   
+         5
+         4   1  1  1  1
+         3   2  2  2  1
+         2   3  2  2  1
+         1   4  3  2  1    ^
+         0   4  3  2  1    |
+     ans        2
+```
+Runtime: 543 ms, Beats 41.01%
+Memory: 517.48 MB, Beats 28.78%
+```
+```c++
+class Solution {
+public:
+    long long countQuadruplets(vector<int>& nums) {
+        int n = nums.size(), j, k, a;
+        long long ans = 0;
+        vector<vector<int>> left(n, vector<int>(n + 1, 0));
+        vector<vector<int>> right(n, vector<int>(n + 1, 0));
+        for (j = 1; j < n; j ++) {
+            left[j] = left[j - 1];
+            for (a = nums[j - 1] + 1; a <= n; a ++)
+                left[j][a] += 1;
+        }
+        for (k = n - 2; k >= 0; k --) {
+            right[k] = right[k + 1];
+            for (a = 0; a < nums[k + 1]; a ++)
+                right[k][a] += 1;
+        }
+        for (j = 0; j < n; j ++) {
+            for (k = n - 1; k > j; k --) {
+                if (nums[j] <= nums[k]) {
+                    continue;
+                }
+                ans += left[j][nums[k]] * right[k][nums[j]];
+            }
+        }
+        return ans;
+    }
+};
+```
+
+**Solution 3: (Two Pointers, Prefix Sum)**
+
+                vj vk
+          5              x
+          4           x   
+          3     x           
+          2        x      
+          1  x            
+     nums = [1, 3, 2, 4, 5]
+pre_small       1      
+cnt
+ans
+-----------------------------
+pre_small          1   
+cnt             1
+ans                 
+-----------------------------
+pre_small             3
+cnt              
+ans                   1
+----------------------------
+pre_small                4
+cnt              
+ans                      2
+
+```
+Runtime: 75 ms, Beats 94.96%
+Memory: 16.61 MB, Beats 69.06%
+```
+```c++
+class Solution {
+public:
+    long long countQuadruplets(vector<int>& nums) {
+        long long ans = 0;
+        int n = nums.size();
+        long long prev_small = 0;
+        vector<long long> cnt(n);
+        for (int k = 0; k < n; k ++){
+            prev_small = 0;
+            for (int j = 0; j < k; j ++){
+                if (nums[k] > nums[j]) {
+                    prev_small += 1;
+                    ans += cnt[j];
+                } else if (nums[k] < nums[j]) {
+                    cnt[j] += prev_small;
+                }
+            }
+        }
+        return ans; 
     }
 };
 ```
