--- a/algorithm/LeetCode/[Hard] 1420. Build Array Where You Can Find The Maximum Exactly K Comparisons.md
+++ b/algorithm/LeetCode/[Hard] 1420. Build Array Where You Can Find The Maximum Exactly K Comparisons.md
@@ -236,3 +236,53 @@ public:
     }
 };
 ```
+
+**Solution 6: (DP Bottom-Up)**
+
+    dp[a][b][c]  // length: a, max: b, comparision: c
+= b * dp[a - 1][b][c] + (dp[a - 1][1][c - 1] + ... + dp[a - 1][b - 1][c - 1])
+  -------------------   -----------------------------------------------------
+  append [1 .. b] to a - 1 length with c comparision
+                        a - 1 length with c - 1 comparision with max: 1 .. b - 1
+
+    n = 2, m = 3, k = 1
+
+     0      1      2   <a
+3    0 0    0 1    0 3   <c
+2    0 0    0 1    0 2
+1    0 0    0 1    0 1
+^
+b
+```
+Runtime: 99 ms, Beats 74.64%
+Memory: 18.31 MB, Beats 12.83%
+```
+```c++
+class Solution {
+public:
+    int numOfArrays(int n, int m, int k) {
+        int a, b, c, bb, MOD = 1e9 + 7;
+        long long s, ans = 0;
+        vector<vector<vector<long long>>> dp(n + 1, vector<vector<long long>>(m + 1, vector<long long>(k + 1)));
+        for (b = 1; b <= m; b ++) {
+            dp[1][b][1] = 1;
+        }
+        for (a = 2; a <= n; a ++) {
+            for (b = 1; b <= m; b ++) {
+                for (c = 1; c <= k; c ++) {
+                    s = 0;
+                    s = (s + b * dp[a - 1][b][c]) % MOD;
+                    for (bb = 1; bb < b; bb ++) {
+                        s = (s + dp[a - 1][bb][c - 1]) % MOD; 
+                    }
+                    dp[a][b][c] = s;
+                }
+            }
+        }
+        for (b = 1; b <= m; b ++) {
+            ans = (ans + dp[n][b][k]) % MOD;
+        }
+        return ans;
+    }
+};
+```
