--- a/algorithm/LeetCode/[Hard] 1444. Number of Ways of Cutting a Pizza.md
+++ b/algorithm/LeetCode/[Hard] 1444. Number of Ways of Cutting a Pizza.md
@@ -151,3 +151,64 @@ public:
     }
 };
 ```
+
+**Solution 3: (DP Bottom-Up, Prefix Sum, backward)**
+
+pizza = ["A . .",
+         "A A A",
+         ". . ."], k = 3
+
+dp[i][j][k]
+= way from bottm right to (i,j)
+
+pre       4          2          1          0
+dp        0 1 3 3    0 1 1 0    0 1 0 0    1 0 0 0
+          3          2          1          0
+          0 1 2 1    0 1 1 0    0 1 0 0    1 0 0 0
+          0          0          0          0
+          0 0 0 0    0 0 0 0    0 0 0 0    1 0 0 0
+          0          0          0          0
+          0 0 0 0    0 0 0 0    0 0 0 0    1 0 0 0
+
+```
+Runtime: 3, ms Beats 99.56%
+Memory: 9.88 MB, Beats 93.78%
+```
+```c++
+class Solution {
+public:
+    int ways(vector<string>& pizza, int k) {
+        int rows = pizza.size(), cols = pizza[0].size(), i, j, p, ni, nj, MOD = 1e9 + 7;
+        int dp[55][55][11] = {};
+        int pre[55][55] = {};
+        for (i = rows - 1; i >= 0; i --) {
+            for (j = cols - 1; j >= 0; j --) {
+                pre[i][j] = pre[i + 1][j] + pre[i][j + 1] - pre[i + 1][j + 1] + (pizza[i][j] == 'A' ? 1 : 0);
+            }
+        }
+        for (i = 0; i <= rows; i ++) {
+            dp[i][cols][0] = 1;
+        }
+        for (i = rows; i >= 0; i --) {
+            for (j = cols; j >= 0; j --) {
+                for (p = 0; p < k; p ++) {
+                    if (dp[i][j][p]) {
+                        for (ni = i - 1; ni >= 0; ni --) {
+                            if (pre[ni][j] - pre[i][j] > 0) {
+                                dp[ni][j][p + 1] = (dp[ni][j][p + 1] + dp[i][j][p]) % MOD;
+                            }
+                        }
+                        for (nj = j - 1; nj >= 0; nj --) {
+                            if (pre[i][nj] - pre[i][j] > 0) {
+                                dp[i][nj][p + 1] = (dp[i][nj][p + 1] + dp[i][j][p]) % MOD;
+                            }
+                        }
+                    }
+                }
+            }
+        }
+        return dp[0][0][k];
+
+    }
+};
+```
