--- a/algorithm/LeetCode/[Hard] 1703. Minimum Adjacent Swaps for K Consecutive Ones.md
+++ b/algorithm/LeetCode/[Hard] 1703. Minimum Adjacent Swaps for K Consecutive Ones.md
@@ -70,3 +70,48 @@ class Solution:
         res -= (k // 2) * ((k + 1) // 2)
         return res
 ```
+
+**Solution 2: (Sliding Window, Prefix Sum, distance to median)**
+
+    1 0 1 0 1 0 1 1 0 1 1 1, k = 5
+    -   -   -   - -   - - -
+total: [0, 2, 4, 6, 7, 9, 10, 11]
+        <<<<----->>>>
+              v
+       [4  4  4  4  4]
+
+cost = (4 - 0) + (4 - 2) + (6 - 4) + (7 - 4)
+        x         x             x         x
+     = (6 + 7) - (0 + 2) 
+        >>>>>     <<<<<
+     -> prefixsum
+
+```
+Runtime: 16 ms, Beats 39.78%
+Memory: 158.42 MB, Beats 5.52%
+```
+```c++
+class Solution {
+public:
+    int minMoves(vector<int>& nums, int k) {
+        long long result = INT_MAX;
+        vector<long long> total; //to store indices of all 1s
+        for (int i = 0; i < nums.size(); i ++) {
+            if (nums[i]) {
+                total.push_back(i);
+            }
+        }   
+        int n = total.size();
+        vector<long long> s = {0}; //to store the prefix sum of the indices of 1s
+        for (int i = 0; i < n; i ++) {
+            s.push_back(s.back() + total[i]);
+        }
+        for (int i = k / 2; i < n - (k - 1)/ 2; i ++) {
+            long long current = 1LL * k / 2 * total[i] - (s[i] - s[i - k / 2]) - 1LL * k / 2 * (k / 2 + 1) / 2; //calculate the distances to combine all left k/2 1s with the median value
+            current += 1LL * s[i + 1 + (k-1) / 2] - s[i + 1] - (k - 1) / 2 * total[i] - 1LL * (k - 1) / 2 * ((k - 1) / 2 + 1) / 2; //to calculate the distances to combine all right (k-1)/2 1s with the median value
+            result = min(result, current);
+        }
+        return result;
+    }
+};
+```
