--- a/algorithm/LeetCode/[Hard] 2209. Minimum White Tiles After Covering With Carpets.md
+++ b/algorithm/LeetCode/[Hard] 2209. Minimum White Tiles After Covering With Carpets.md
@@ -80,3 +80,35 @@ public:
     }
 };
 ```
+
+**Solution 3: (DP Bottom-Up, Prefix Sum)**
+
+    floor = "1 0 1 1 0 1 0 1", numCarpets = 2, carpetLen = 2
+             0 1 1 2 3 3 4 4 5 
+                   1 1 1 2 2 3 <1,k
+                       1 1 2 2
+
+```
+Runtime: 506 ms, Beats 73.83%
+Memory: 260.16 MB, Beats 39.25%
+```
+```c++
+class Solution {
+public:
+    int minimumWhiteTiles(string floor, int numCarpets, int carpetLen) {
+        int n = floor.size(), i, k;
+        vector<vector<int>> dp(n + 1, vector<int>(numCarpets + 1));
+        for (i = 0; i < n; i ++) {
+            dp[i + 1][0] = dp[i][0] + (floor[i] == '1');
+        }
+        for (k = 1; k <= numCarpets; k ++) {
+            for (i = k * carpetLen; i < n; i ++) {
+                dp[i + 1][k] = min(dp[i][k] + (floor[i] == '1'), dp[i + 1 - carpetLen][k - 1]);
+                                // ----------------------------  ----------------------------
+                                //            taken                          not-taken
+            }
+        }
+        return dp[n][numCarpets];
+    }
+};
+```
