--- a/algorithm/LeetCode/[Hard] 2281. Sum of Total Strength of Wizards.md
+++ b/algorithm/LeetCode/[Hard] 2281. Sum of Total Strength of Wizards.md
@@ -91,58 +91,88 @@ class Solution:
         return res % mod
 ```
 
-**Solution 2: (Stack)**
+**Solution 2: (Stack, left and right)**
+
+                    v
+             3      x
+             2            x
+             1   x     x
+                    -
+                 ----
+                    ----
+                 -------
+                    -------
+                 ----------
+    strength = [ 1, 3, 1, 2]
+    prefix     [ 0, 1, 4, 5, 7]
+    prefix_sum [ 0, 1, 5,10,12, 0]
+    left       [-1, 0,-1, 2]
+    right      [ 2, 2, 4, 4]
+
+
+       ...             ... 
+                  x
+    x               
+                             x
+    ^left         ^i         ^right
+     [left+1  ..  i]                = prefix[i + 1] - prefix[left + 1]
+     [left+1 ..    i+1]             = prefix[i + 2] - prefix[left + 1]
+     ...               
+     [left+1 ..       right-1]      = prefix[right] - prefix[left + 1]
+      [left+2 ..  i]                = prefix[i + 1] - prefix[left + 2]
+      [left+2 ..   i+1]             = prefix[i + 2] - prefix[left + 2]
+      ...
+      [left+2 ..      right-1]      = prefix[right] - prefix[left + 2]
+                  [i]               = prefix[i + 1] - prefix[i]
+                  [i i+1]           = prefix[i + 2] - prefix[i]
+      ...
+                  [i..right-1]      = prefix[right] - prefix[i]
+                                      -------------
+                  +                   (prefix[i + 1] + prefix[i + 2] + ... + prefix[right]) * (i - left)
+                                                      ----------
+                  -                                   (prefix[left + 1] + prefix[left + 2] + ... + prefix[i]) * (right - i)
 ```
-Runtime: 380 ms
-Memory Usage: 92.4 MB
+Runtime: 37 ms, Beats 77.05%
+Memory: 110.25 MB, Beats 11.48%
 ```
 ```c++
 class Solution {
 public:
     int totalStrength(vector<int>& strength) {
-        long long MOD = 1'000'000'007;
-        const int N = strength.size();
-        // sum of first k elements
-        vector<long long> prefix(N + 1, 0L);
-        for (int i = 0; i < N; ++i) {
+        int n = strength.size(), i, MOD = 1e9 + 7;
+        vector<long long> prefix(n + 1);
+        for (i = 0; i < n; i ++) {
             prefix[i + 1] = (prefix[i] + strength[i]) % MOD;
         }
-        // sum of first k prefix
-        vector<long long> prefix_sum(N + 2, 0L);
-        for (int i = 0; i <= N; ++i) {
+        vector<long long> prefix_sum(n + 2);
+        for (i = 0; i <= n; i ++) {
             prefix_sum[i + 1] = (prefix_sum[i] + prefix[i]) % MOD;
         }
-
-        // first index on the left < current st
-        vector<int> left(N, -1);
-        // mono increase
-        vector<int> stack;
-        for (int i = 0; i < N; ++i) {
-            while (!stack.empty() && strength[stack.back()] >= strength[i]) {
-                stack.pop_back();
+        vector<int> left(n);
+        vector<int> stk;
+        for (i = 0; i < n; i ++) {
+            while (!stk.empty() && strength[stk.back()] >= strength[i]) {
+                stk.pop_back();
             }
-            left[i] = stack.empty() ? -1 : stack.back();
-            stack.push_back(i);
+            left[i] = stk.empty() ? -1 : stk.back();
+            stk.push_back(i);
         }
-
-        // first index on the right <= current st
-        vector<int> right(N, N);
-        stack.clear();
-        for (int i = N - 1; i >= 0; --i) {
-            while (!stack.empty() && strength[stack.back()] > strength[i]) {
-                stack.pop_back();
+        vector<int> right(n);
+        stk.clear();
+        for (i = n - 1; i >= 0; i --) {
+            while (!stk.empty() && strength[stk.back()] > strength[i]) {
+                stk.pop_back();
             }
-            right[i] = stack.empty() ? N : stack.back();
-            stack.push_back(i);
+            right[i] = stk.empty() ? n : stk.back();
+            stk.push_back(i);
         }
 
-        long long res = 0;
-        for (int i = 0; i < N; ++i) {
-            res += ((prefix_sum[right[i] + 1] - prefix_sum[i + 1]) * (i - left[i]) % MOD + MOD * 2 - 
-                   (prefix_sum[i + 1] - prefix_sum[left[i] + 1]) * (right[i] - i) % MOD) % MOD * strength[i] % MOD;
-            res %= MOD;
+        long long ans = 0;
+        for (i = 0; i < n; i ++) {
+            ans = (ans + (((((prefix_sum[right[i] + 1] - prefix_sum[i + 1]) * (i - left[i]) - (prefix_sum[i + 1] - prefix_sum[left[i] + 1]) * (right[i] - i)) % MOD + MOD) % MOD) * strength[i])) % MOD;
         }
-        return (int) res;
+        return ans;
+
     }
 };
 ```
