--- a/algorithm/LeetCode/[Hard] 2302. Count Subarrays With Score Less Than K.md
+++ b/algorithm/LeetCode/[Hard] 2302. Count Subarrays With Score Less Than K.md
@@ -128,17 +128,17 @@ public:
 
 ```
 Runtime: 0 ms, Beats 100.00%
-Memory: 99.12 MB, Beats 14.11%
+Memory: 98.96 MB, Beats 74.88%
 ```
 ```c++
 class Solution {
 public:
     long long countSubarrays(vector<int>& nums, long long k) {
-        int n = nums.size(), i = 0, j = 0;
-        long long a = 0, cur = 0, ans = 0;
+        int n = nums.size(), i = 0, j;
+        long long a = 0, ans = 0;
         for (j = 0; j < n; j ++) {
             a += nums[j];
-            while (a*(j-i+1) >= k) {
+            while (a * (j - i + 1) >= k) {
                 a -= nums[i];
                 i += 1;
             }
@@ -147,5 +147,4 @@ public:
         return ans;
     }
 };
-```
 
