--- a/algorithm/LeetCode/[Hard] 2681. Power of Heroes.md
+++ b/algorithm/LeetCode/[Hard] 2681. Power of Heroes.md
@@ -56,3 +56,46 @@ public:
     }
 };
 ```
+
+**Solution 2: (Sort, Prefix Sum, math)**
+
+    nums = [ 2,  1,  4]
+             1   2   4
+    a            1   4
+                12 128
+    ans      1  13 141
+             
+
+             a   b   c   d
+             -
+             a^3
+             -----
+             a^3 + b^3 + b^2 * a
+             ---------
+             a^3 + b^3 + c^3 + c^2 * (b + 2a) + b^2 * a
+             ^^^^^^^^^^^^^^^   ^^^^^^^^^^^^^^^^^^^^^^^^^
+                                     --pre---
+             ---------------
+             a^3 + b^3 + c^3 + d^3 + d^2 * (c + 2b + 4a) + c^2 * (b + 2a) + b^2 * a
+             ^^^^^^^^^^^^^^^   -------------------------   ^^^^^^^^^^^^^^^^^^^^^^^^
+                               d * d * (pre * 2 + c + d)
+```
+Runtime: 16 ms, Beats 51.24%
+Memory: 98.84 MB, Beats 70.25%
+```
+```c++
+class Solution {
+public:
+    int sumOfPower(vector<int>& nums) {
+        int MOD = 1e9 + 7;
+        long long ans = 0, pre = 0;
+        sort(nums.begin(), nums.end());
+        for (auto num: nums) {
+            ans = (ans + ((((pre + num) * num) % MOD) * num) % MOD) % MOD;
+            pre = (pre * 2 + num) % MOD;
+        }
+        return ans;
+    }
+};
+```
+
